[gd_scene load_steps=3 format=3 uid="uid://jx3phjp0mvoq"]

[ext_resource type="Script" path="res://scripts/menu_pause.gd" id="1_bpbqn"]
[ext_resource type="PackedScene" uid="uid://b60swerlqj70r" path="res://scenes/button.tscn" id="2_u82uq"]

[node name="menuOption" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_bpbqn")

[node name="btn_play" parent="." instance=ExtResource("2_u82uq")]
position = Vector2(576, 448)

[node name="btn_quit" parent="." instance=ExtResource("2_u82uq")]
position = Vector2(576, 576)

[connection signal="pressed" from="btn_play" to="." method="_on_btn_play_pressed"]
[connection signal="pressed" from="btn_play" to="." method="_on_btn_resume_pressed"]
[connection signal="pressed" from="btn_quit" to="." method="_on_btn_quit_pressed"]
